--- a/scripts/BumaCleanToPoint.Rmd
+++ b/scripts/BumaCleanToPoint.Rmd
@@ -90,6 +90,10 @@ f3_dates
 ```
 
 ```{r}
+f3_dates %>% distinct(site_id, burn_unburn) 
+```
+
+```{r}
 f3_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '../outputs/pairs/buma.csv')
 ```
 
