--- a/scripts/CleanToPointRocha.Rmd
+++ b/scripts/CleanToPointRocha.Rmd
@@ -1,12 +1,9 @@
 ---
-title: "Sizov Clean To Point"
+title: "Rocha Clean To Point"
 author: "Anna Talucci"
 date: '2022-12-11'
 output: html_document
 ---
-
-
-
 
 # clear environment
 ```{r}
@@ -50,15 +47,31 @@ f
 
 
 
-## Sizov
+## Rocha
 ```{r}
 f14 <- read.csv(f[14], header = TRUE)
 f14
 ```
+
+# fix incorrect logical columns
+```{r}
+# fix incorrect logical columns
+f14$slope <- read.csv(f[14], header = TRUE, colClasses = "character")[,20]
+```
+
+```{r}
+# organic depth is missing, but set to NA
+f14$organic_depth <- as.numeric(f14$organic_depth)
+```
+
+```{r}
+# convert thaw depth to numeric - blank cells have a period, and will be converted to NA
+f14$thaw_depth <- as.numeric(f14$thaw_depth)
+```
+
 ```{r}
 str(f14)
 ```
-
 
 ```{r}
 f14_dates = f14 %>%
@@ -66,13 +79,14 @@ f14_dates = f14 %>%
   mutate(julianDate = yday(date)) %>%
   dplyr::select(-notes)
 
+
 f14_dates
 ```
 
-
 ```{r}
-f14_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '../outputs/pairs/sizov.csv')
+f14_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '../outputs/pairs/rocha.csv')
 ```
+
 ```{r}
 f14_dates %>% distinct(julianDate, year, date)
 ```
@@ -90,18 +104,33 @@ f14_active = f14_dates %>%
 f14_active
 ```
 
+```{r}
+unique(f14_active$date)
+```
+
+```{r}
+unique(f14_thaw$date)
+```
+# Save clean data
+```{r}
+write_csv(f14_active, "../outputs/CleanActive/RochaCleanActive.csv")
+```
+
 # Create points shapefile
 
-## For F14
+## For f14
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
+f14_thaw_pts = st_as_sf(f14_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
 f14_active_pts = st_as_sf(f14_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
+
 f14_pts = st_as_sf(f14_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f14_active_pts, "../outputs/ActivePoints/Sizov_active_pts.shp", driver="ESRI Shapefile")
-st_write(f14_pts, "../outputs/allPoints/Sizov_pts.shp", driver="ESRI Shapefile")
+st_write(f14_thaw_pts, "../outputs/ThawPoints/Rocha_thaw_pts.shp", driver="ESRI Shapefile")
+st_write(f14_active_pts, "../outputs/ActivePoints/Rocha_active_pts.shp", driver="ESRI Shapefile")
+st_write(f14_pts, "../outputs/allPoints/Rocha_pts.shp", driver="ESRI Shapefile")
 ```
