--- a/scripts/CleanToPointBaillargeon.Rmd
+++ b/scripts/CleanToPointBaillargeon.Rmd
@@ -86,6 +86,7 @@ f1 %>% distinct(site_id,year,month,day,fire_id,burn_unburn)
 str(f1)
 ```
 
+# Add date 
 ```{r}
 f1_dates = f1 %>%
   mutate(date = as.Date(with(., paste(year, month, day,sep="-")), "%Y-%m-%d")) %>%
@@ -94,52 +95,36 @@ f1_dates = f1 %>%
 f1_dates
 ```
 
-
+# distinct site pairs
 ```{r}
 f1_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '../outputs/pairs/balliargeon.csv')
-```
-
-```{r eval=FALSE, include=FALSE}
-f1 = f1 %>% 
-  drop_na(long) %>%
-  drop_na(lat)
-f1
 ```
 
 ```{r}
 f1_dates %>% distinct(julianDate, year, date)
 ```
 
-# Split by active & thaw
+# Finish cleaning to match other datasets
 ```{r}
-f1_thaw = f1_dates %>% 
-  filter(thaw_active == "T") 
-
-f1_thaw
-
-f1_active = f1_dates %>% 
-  filter(thaw_active == "A") 
-
-f1_active
+( 
+  f1_clean = f1_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
 
 # Create points shapefile
 
 ## For F1
-sf::st_as_sf(dd, coords = c("x","y"))
-```{r}
-f1_pts = st_as_sf(f1_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
-```
 
 ```{r}
-f1_thaw_pts = st_as_sf(f1_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f1_pts = st_as_sf(f1_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
-
 
 ### write to shapefile
-```{r eval=FALSE, include=FALSE}
-st_write(f1_thaw_pts, "../outputs/ThawPoints/Baillargeon_thaw_pts.shp", driver="ESRI Shapefile")
-```
 
 ```{r eval=FALSE, include=FALSE}
 st_write(f1_pts, "../outputs/allPoints/Baillargeon_pts.shp", driver="ESRI Shapefile")
