--- a/scripts/CleanToPointBreen.Rmd
+++ b/scripts/CleanToPointBreen.Rmd
@@ -9,7 +9,7 @@ output: html_document
 ```{r}
 rm(list=ls())
 ```
-**THIS DTA IS INCORRECTLY FORMATED**
+**THIS DATA IS INCORRECTLY FORMATED**
 # Overview
 
 Adapt script form M. Loranty data_cleaning, to only clean and not aggregate data. 
@@ -55,15 +55,26 @@ f2
 ```{r}
 str(f2)
 ```
+
 ```{r}
-f2_dates = f2 %>%
+unique(f2$year)
+```
+# Create single fire year
+```{r}
+( f2_dates = f2 %>%
+  mutate(fire_year = pmax(fire_year_1 , fire_year_2, fire_year_3, na.rm = TRUE)) %>%
+  mutate(reburn = paste(fire_year_1 , fire_year_2, fire_year_3, sep = ', ')) %>%
+    mutate(fire_id = paste(fire_id1 , fire_id2, fire_id3, sep = ', ')) %>%
+  dplyr::select(last_name:day, burn_unburn:reburn, fire_id) %>%
   mutate(date = as.Date(with(., paste(year, month, day,sep="-")), "%Y-%m-%d")) %>%
-  mutate(julianDate = yday(date)) 
-
-
-f2_dates
+  mutate(julianDate = yday(date)) %>%
+    mutate(fire_id = gsub("\\,,*", "", fire_id)) %>%
+    drop_na(lat)
+)
 ```
 
+
+# Look at distinct identifiers
 ```{r}
 f2_dates %>% distinct(site_id, plot_id, burn_unburn) %>% write.csv(., '../outputs/pairs/breen.csv')
 ```
@@ -72,20 +83,26 @@ f2_dates %>% distinct(site_id, plot_id, burn_unburn) %>% write.csv(., '../output
 f2_dates %>% distinct(julianDate, year, date)
 ```
 
+# Finish cleaning to match other datasets
+```{r}
+( 
+  f2_clean = f2_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
+```
+
 # Create points shapefile
 
 ## For F2
-sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f2_pts = st_as_sf(f2_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f2_pts = st_as_sf(f2_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
-
 
 ### write to shapefile
-```{r eval=FALSE, include=FALSE}
-st_write(f2_pts, "../outputs/AdjustedALT/Breen_pts.shp", driver="ESRI Shapefile")
-```
-
 ```{r}
 st_write(f2_pts, "../outputs/allPoints/Breen_pts.shp", driver="ESRI Shapefile")
 ```
