--- a/scripts/CleanToPointBuma.Rmd
+++ b/scripts/CleanToPointBuma.Rmd
@@ -80,7 +80,7 @@ f3 %>%
   group_by(thaw_active) %>%
   count(.)
 ```
-**DATA is missing for Day**
+
 ```{r}
 f3_dates = f3 %>%
   mutate(date = as.Date(with(., paste(year, month, day,sep="-")), "%Y-%m-%d")) %>%
@@ -100,36 +100,28 @@ f3_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '
 ```{r}
 f3_dates %>% distinct(julianDate, year, date)
 ```
-# Split by active & thaw
+
+# Finish cleaning to match other datasets
 ```{r}
-f3_thaw = f3_dates %>% 
-  filter(thaw_active == "T") 
-
-f3_thaw
-
-f3_active = f3_dates %>% 
-  filter(thaw_active == "A") 
-
-f3_active
+( 
+  f3_clean = f3_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
+
 
 # Create points shapefile
 
 ## For F3
-sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f3_thaw_pts = st_as_sf(f3_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
-```
-
-```{r}
-f3_pts = st_as_sf(f3_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f3_pts = st_as_sf(f3_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 ### write to shapefile
-```{r eval=FALSE, include=FALSE}
-st_write(f3_thaw_pts, "../outputs/ThawPoints/Buma_thaw_pts.shp", driver="ESRI Shapefile")
-```
-
 ```{r}
 st_write(f3_pts, "../outputs/allPoints/Buma_pts.shp", driver="ESRI Shapefile")
 ```
