--- a/scripts/CleanToPointDouglas.Rmd
+++ b/scripts/CleanToPointDouglas.Rmd
@@ -79,36 +79,28 @@ f5_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '
 f5_dates %>% distinct(julianDate, year, date)
 ```
 
-# Split by active & thaw
+# Finish cleaning to match other datasets
 ```{r}
-f5_thaw = f5_dates %>% 
-  filter(thaw_active == "T") 
-
-f5_thaw
-
-f5_active = f5_dates %>% 
-  filter(thaw_active == "A") 
-
-f5_active
+( 
+  f5_clean = f5_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
 
 # Create points shapefile
 
 ## For F5
-sf::st_as_sf(dd, coords = c("x","y"))
-```{r}
-f5_active_pts = st_as_sf(f5_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
-```
 
 ```{r}
-f5_pts = st_as_sf(f5_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f5_pts = st_as_sf(f5_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
-```{r eval=FALSE, include=FALSE}
-st_write(f5_active_pts, "../outputs/ActivePoints/Douglas_active_pts.shp", driver="ESRI Shapefile")
-```
 
 ```{r}
 st_write(f5_pts, "../outputs/allPoints/Douglas_pts.shp", driver="ESRI Shapefile")
