--- a/scripts/CleanToPointFrost.Rmd
+++ b/scripts/CleanToPointFrost.Rmd
@@ -89,36 +89,26 @@ f6_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '
 f6_dates %>% distinct(julianDate, year, date)
 ```
 
-# Split by active & thaw
+# Finish cleaning to match other datasets
 ```{r}
-f6_thaw = f6_dates %>% 
-  filter(thaw_active == "T") 
-
-f6_thaw
-
-f6_active = f6_dates %>% 
-  filter(thaw_active == "A") 
-
-f6_active
+( 
+  f6_clean = f6_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
 
 # Create points shapefile
 
 ## For F6
-sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f6_thaw_pts = st_as_sf(f6_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
-```
-
-```{r}
-f6_pts = st_as_sf(f6_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f6_pts = st_as_sf(f6_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 ### write to shapefile
-```{r eval=FALSE, include=FALSE}
-st_write(f6_thaw_pts, "../outputs/ThawPoints/Frost_thaw_pts.shp", driver="ESRI Shapefile")
-```
-
 ```{r}
 st_write(f6_pts, "../outputs/allPoints/Frost_pts.shp", driver="ESRI Shapefile")
 ```
