--- a/scripts/CleanToPointGaglioti.Rmd
+++ b/scripts/CleanToPointGaglioti.Rmd
@@ -87,37 +87,25 @@ f7_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '
 f7_dates %>% distinct(julianDate, year, date)
 ```
 
-# Split by active & thaw
+# Finish cleaning to match other datasets
 ```{r}
-f7_thaw = f7_dates %>% 
-  filter(thaw_active == "T") 
-
-f7_thaw
-
-f7_active = f7_dates %>% 
-  filter(thaw_active == "A") 
-
-f7_active
+( 
+  f7_clean = f7_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
-
 # Create points shapefile
 
 ## For F7
-sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f7_active_pts = st_as_sf(f7_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f7_pts = st_as_sf(f7_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
-
-```{r}
-f7_pts = st_as_sf(f7_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
-```
-
 
 ### write to shapefile
-```{r eval=FALSE, include=FALSE}
-st_write(f7_active_pts, "../outputs/ActivePoints/Gaglioti_active_pts.shp", driver="ESRI Shapefile")
-```
-
 ```{r}
 st_write(f7_pts, "../outputs/allPoints/Gaglioti_pts.shp", driver="ESRI Shapefile")
 ```
