--- a/scripts/CleanToPointHolloway.Rmd
+++ b/scripts/CleanToPointHolloway.Rmd
@@ -112,7 +112,7 @@ f8_dates
 
 
 ```{r}
-f8_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '../outputs/pairs/holloway.csv')
+f8_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn, pairUnb) %>% write.csv(., '../outputs/pairs/holloway.csv')
 ```
 
 
@@ -121,16 +121,26 @@ f8_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '
 f8_dates %>% distinct(julianDate, year, date)
 ```
 
-
+# Finish cleaning to match other datasets
+```{r}
+( 
+  f8_clean = f8_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
+```
 
 # Create points shapefile
 
 ```{r}
-f8_pts = st_as_sf(f8_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f8_pts = st_as_sf(f8_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 # write to shapefile
-```{r eval=FALSE, include=FALSE}
+```{r}
 st_write(f8_pts, "../outputs/allPoints/Holloway_pts.shp", driver="ESRI Shapefile")
 ```
