--- a/scripts/CleanToPointManies.Rmd
+++ b/scripts/CleanToPointManies.Rmd
@@ -56,11 +56,16 @@ f9
 ```{r}
 str(f9)
 ```
-# fix incorrect logical columns
-```{r}
-f9$slope <- read.csv(f[8], header = TRUE, colClasses = "character")[,20]
 
-f9$organic_depth <- read.csv(f[8], header = TRUE, na.strings = "unk")[,15]
+# Fixes 
+```{r}
+f9 = f9 %>%
+   mutate(thaw_active=replace(thaw_active, thaw_active==TRUE, 'thaw')) %>% # switch true to thaw
+     as.data.frame() %>%
+  mutate(slope=replace(slope, slope==FALSE, 'flat')) %>% # switch false to flat
+     as.data.frame() %>%
+  mutate(organic_depth = (na.strings = "unk")) %>%
+     as.data.frame() 
 ```
 
 ```{r}
@@ -83,27 +88,21 @@ f9_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '
 f9_dates %>% distinct(site_id, thaw_active, julianDate, year, date)
 ```
 Apr 1  to September 30 (91-273)
-```{r}
+```{r eval=FALSE, include=FALSE}
 ggplot(f9_dates, aes(x=lat, y=long, color=thaw_active)) +
   geom_jitter()
 ```
 
-# Split by active & thaw
+# Finish cleaning to match other datasets
 ```{r}
-f9_thaw = f9_dates %>% 
-  filter(thaw_active == "T") 
-
-f9_thaw
-
-f9_active = f9_dates %>% 
-  filter(thaw_active == "A") 
-
-f9_active
-```
-
-# Save clean data
-```{r}
-write_csv(f9_active, "../outputs/CleanActive/ManiesCleanActive.csv")
+( 
+  f9_clean = f9_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
 
 # Create points shapefile
@@ -111,15 +110,11 @@ write_csv(f9_active, "../outputs/CleanActive/ManiesCleanActive.csv")
 ## For f9
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f9_thaw_pts = st_as_sf(f9_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
-f9_active_pts = st_as_sf(f9_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
-f9_pts = st_as_sf(f9_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f9_pts = st_as_sf(f9_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f9_thaw_pts, "../outputs/ThawPoints/Manies_thaw_pts.shp", driver="ESRI Shapefile")
-st_write(f9_active_pts, "../outputs/ActivePoints/Manies_active_pts.shp", driver="ESRI Shapefile")
 st_write(f9_pts, "../outputs/allPoints/Manies_pts.shp", driver="ESRI Shapefile")
 ```
