--- a/scripts/CleanToPointNatali.Rmd
+++ b/scripts/CleanToPointNatali.Rmd
@@ -128,71 +128,28 @@ f10_all_long %>% distinct(julianDate, year, date)
 f10_all_long %>% filter_all(any_vars(is.na(.))) 
 ```
 
-# Split by active & thaw
+
+# Finish cleaning to match other datasets
 ```{r}
-f10_all = f10_all_long
-
-f10_thaw = f10_all_long %>% 
-  filter(thaw_active == "T") %>%
-  drop_na(long) %>%
-  drop_na(lat)
-
-f10_active = f10_all_long %>% 
-  filter(thaw_active == "A") %>%
-  drop_na(long) %>%
-  drop_na(lat)
-```
-
-```{r}
-unique(f10_active$date)
-```
-Aug 2
-Sept 6
-Sept 15, 16, 17, 18, 19
-
-```{r}
-unique(f10_thaw$date)
-```
-
-```{r}
-unique(f10_active$julianDate)
-```
-
-```{r}
-unique(f10_thaw$date)
-```
-
-```{r}
-unique(f10_thaw$julianDate)
-```
-
-```{r}
-f10_active %>% 
-  filter(is.na(long))
-
-f10_active %>% 
-  filter(is.na(lat))
-```
-
-# Save clean data
-```{r}
-write_csv(f10_active, "../outputs/CleanActive/NataliCleanActive.csv")
+( 
+  f10_clean = f10_all_long %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
 
 # Create points shapefile
 
-## For f10
-sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f10_thaw_pts = st_as_sf(f10_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
-f10_active_pts = st_as_sf(f10_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
-f10_pts = st_as_sf(f10_all, coords = c("long","lat"), crs = 4326, remove = FALSE)
+
+f10_pts = st_as_sf(f10_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f10_thaw_pts, "../outputs/ThawPoints/Natali_thaw_pts.shp", driver="ESRI Shapefile")
-st_write(f10_active_pts, "../outputs/ActivePoints/Natali_active_pts.shp", driver="ESRI Shapefile")
 st_write(f10_pts, "../outputs/allPoints/Natali_pts.shp", driver="ESRI Shapefile")
 ```
