--- a/scripts/CleanToPointOlefeldt.Rmd
+++ b/scripts/CleanToPointOlefeldt.Rmd
@@ -76,8 +76,8 @@ str(f12)
 ```{r}
 f12_dates = f12 %>%
   mutate(date = as.Date(with(., paste(year, month, day,sep="-")), "%Y-%m-%d")) %>%
-  mutate(julianDate = yday(date)) %>%
-  dplyr::select(-fire_id)
+  mutate(julianDate = yday(date)) #%>%
+  #dplyr::select(-fire_id)
 
 f12_dates
 ```
@@ -95,31 +95,17 @@ f12_dates %>% distinct(site_id, plot_id, burn_unburn) %>% write.csv(., '../outpu
 f12_dates %>% distinct(julianDate, year, date)
 ```
 
-# Split by active & thaw
-```{r}
-f12_thaw = f12_dates %>% 
-  filter(thaw_active == "T") 
 
-f12_thaw
-
-f12_active = f12_dates %>% 
-  filter(thaw_active == "A") 
-
-f12_active
-```
+# Finish cleaning to match other datasets
 ```{r}
-unique(f12_active$date)
-```
-```{r}
-unique(f12_active$julianDate)
-```
-
-```{r}
-unique(f12_thaw$date)
-```
-# Save clean data
-```{r}
-write_csv(f12_active, "../outputs/CleanActive/OlefeldtCleanActive.csv")
+( 
+  f12_clean = f12_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
 
 # Create points shapefile
@@ -127,16 +113,11 @@ write_csv(f12_active, "../outputs/CleanActive/OlefeldtCleanActive.csv")
 ## For f12
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f12_thaw_pts = st_as_sf(f12_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
-f12_active_pts = st_as_sf(f12_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
-
-f12_pts = st_as_sf(f12_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f12_pts = st_as_sf(f12_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f12_thaw_pts, "../outputs/ThawPoints/Olefeldt_thaw_pts.shp", driver="ESRI Shapefile")
-st_write(f12_active_pts, "../outputs/ActivePoints/Olefeldt_active_pts.shp", driver="ESRI Shapefile")
 st_write(f12_pts, "../outputs/allPoints/Olefeldt_pts.shp", driver="ESRI Shapefile")
 ```
