--- a/scripts/CleanToPointPaulson.Rmd
+++ b/scripts/CleanToPointPaulson.Rmd
@@ -84,33 +84,27 @@ f13_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., 
 f13_dates %>% distinct(julianDate, year, date)
 ```
 
-# Split by active & thaw
+# Finish cleaning to match other datasets
 ```{r}
-f13_thaw = f13_dates %>% 
-  filter(thaw_active == "T") 
-
-f13_thaw
-
-f13_active = f13_dates %>% 
-  filter(thaw_active == "A") 
-
-f13_active
+( 
+  f13_clean = f13_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
-
 # Create points shapefile
 
 ## For f13
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f13_thaw_pts = st_as_sf(f13_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
-f13_pts = st_as_sf(f13_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f13_pts = st_as_sf(f13_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
-```{r eval=FALSE, include=FALSE}
-st_write(f13_thaw_pts, "../outputs/ThawPoints/Paulson_thaw_pts.shp", driver="ESRI Shapefile")
-```
 
 ```{r}
 st_write(f13_pts, "../outputs/allPoints/Paulson_pts.shp", driver="ESRI Shapefile")
