--- a/scripts/CleanToPointSizov.Rmd
+++ b/scripts/CleanToPointSizov.Rmd
@@ -77,17 +77,16 @@ f15_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., 
 f15_dates %>% distinct(julianDate, year, date)
 ```
 
-# Split by active & thaw
+# Finish cleaning to match other datasets
 ```{r}
-f15_thaw = f15_dates %>% 
-  filter(thaw_active == "T") 
-
-f15_thaw
-
-f15_active = f15_dates %>% 
-  filter(thaw_active == "A") 
-
-f15_active
+( 
+  f15_clean = f15_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
+)
 ```
 
 # Create points shapefile
@@ -95,13 +94,11 @@ f15_active
 ## For f15
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f15_active_pts = st_as_sf(f15_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
-f15_pts = st_as_sf(f15_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f15_pts = st_as_sf(f15_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f15_active_pts, "../outputs/ActivePoints/Sizov_active_pts.shp", driver="ESRI Shapefile")
 st_write(f15_pts, "../outputs/allPoints/Sizov_pts.shp", driver="ESRI Shapefile")
 ```
