--- a/scripts/CleanToPointVeraverbeke.Rmd
+++ b/scripts/CleanToPointVeraverbeke.Rmd
@@ -64,7 +64,8 @@ f16$thaw_active <- read.csv(f[16], header = TRUE, colClasses = "character")[,19]
 ```{r}
 f16_dates = f16 %>%
   mutate(date = as.Date(with(., paste(year, month, day,sep="-")), "%Y-%m-%d")) %>%
-  mutate(julianDate = yday(date)) 
+  mutate(julianDate = yday(date)) %>%
+  drop_na((lat))
 
 f16_dates
 ```
@@ -76,40 +77,27 @@ f16_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., 
 f16_dates %>% distinct(julianDate, year, date)
 ```
 
-# Split by active & thaw
+
+# Finish cleaning to match other datasets
 ```{r}
-(
-  f16_all = f16_dates %>% 
-  drop_na(long) %>%
-  drop_na(lat)
-)
-
 ( 
-  f16_thaw = f16_dates %>% 
-  filter(thaw_active == "T") 
-)
-
-
-
-(
-  f16_active = f16_dates %>% 
-  filter(thaw_active == "A") 
+  f16_clean = f16_dates %>%  
+  mutate(across(c(plot_id, site_id, fire_id), as.character)) %>% 
+  mutate(across(c(fire_year, organic_depth, slope, day), as.numeric)) %>% 
+    mutate(across(day, ~coalesce(., 0))) %>%
+  rename(lastNm = last_name, cntryId = country_code, lon=long, biome=boreal_tundra, vegCC = veg_cover_class, siteId = site_id, plotId = plot_id, fireId = fire_id, fireYr = fire_year, distur = burn_unburn, orgDpth = organic_depth, msrDepth = thaw_depth, hitRock=hit_rock, gtProbe = gt_probe, msrType = thaw_active, topoPos = topo_position, jDate = julianDate) %>%
+    mutate(msrType = as.character(msrType))
 )
 ```
 
 # Create points shapefile
 
-## For f16
-sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f16_thaw_pts = st_as_sf(f16_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
-f16_pts = st_as_sf(f16_all, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f16_pts = st_as_sf(f16_clean, coords = c("lon","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f16_thaw_pts, "../outputs/ThawPoints/Veraverbeke_thaw_pts.shp", driver="ESRI Shapefile")
-
 st_write(f16_pts, "../outputs/allPoints/Veraverbeke_pts.shp", driver="ESRI Shapefile")
 ```
