--- a/scripts/CombineAllPoints.Rmd
+++ b/scripts/CombineAllPoints.Rmd
@@ -20,176 +20,30 @@ library(sf)
 # Data
 ```{r}
 f01 = st_read("../data/allPoints/Baillargeon_pts.shp", "Baillargeon_pts") 
-f02 = st_read("../data/allPoints/Buma_pts.shp", "Buma_pts") 
-f03 = st_read("../data/allPoints/Dielman_pts.shp", "Dielman_pts") 
-f04 = st_read("../data/allPoints/Douglas_pts.shp", "Douglas_pts") 
-f05 = st_read("../data/allPoints/Frost_pts.shp", "Frost_pts") 
-f06 = st_read("../data/allPoints/Gaglioti_pts.shp", "Gaglioti_pts") 
-f07 = st_read("../data/allPoints/Manies_pts.shp", "Manies_pts") 
-f08 = st_read("../data/allPoints/Natali_pts.shp", "Natali_pts") 
-f09 = st_read("../data/allPoints/ODonnell_pts.shp", "ODonnell_pts") 
-f10 = st_read("../data/allPoints/Olefeldt_pts.shp", "Olefeldt_pts") 
-f11 = st_read("../data/allPoints/Paulson_pts.shp", "Paulson_pts")
-f12 = st_read("../data/allPoints/Rocha_pts.shp", "Rocha_pts") 
-f13 = st_read("../data/allPoints/Sizov_pts.shp", "Sizov_pts") 
-f14 = st_read("../data/allPoints/Veraverbeke_pts.shp", "Veraverbeke_pts") 
+f02  = st_read("../data/allPoints/Breen_pts.shp", "Breen_pts") 
+f03 = st_read("../data/allPoints/Buma_pts.shp", "Buma_pts") 
+f04 = st_read("../data/allPoints/Dielman_pts.shp", "Dielman_pts") 
+f05 = st_read("../data/allPoints/Douglas_pts.shp", "Douglas_pts") 
+f06 = st_read("../data/allPoints/Frost_pts.shp", "Frost_pts") 
+f07 = st_read("../data/allPoints/Gaglioti_pts.shp", "Gaglioti_pts") 
+f08 = st_read("../data/allPoints/Holloway_pts.shp", "Holloway_pts") 
+f09 = st_read("../data/allPoints/Manies_pts.shp", "Manies_pts") 
+f10 = st_read("../data/allPoints/Natali_pts.shp", "Natali_pts") 
+f11 = st_read("../data/allPoints/ODonnell_pts.shp", "ODonnell_pts") 
+f12 = st_read("../data/allPoints/Olefeldt_pts.shp", "Olefeldt_pts") 
+f13 = st_read("../data/allPoints/Paulson_pts.shp", "Paulson_pts")
+f14 = st_read("../data/allPoints/Rocha_pts.shp", "Rocha_pts") 
+f15 = st_read("../data/allPoints/Sizov_pts.shp", "Sizov_pts") 
+f16 = st_read("../data/allPoints/Veraverbeke_pts.shp", "Veraverbeke_pts") 
 ```
 
 # Check columns names
-```{r}
-colnames(f01)
-```
-
-```{r}
-colnames(f02)
-```
-f02 has added columns "fire_d1"  "fr_yr_1"  "fire_d2"  "fr_yr_2"  "fire_d3"  "fr_yr_3" 
-```{r}
-colnames(f03)
-```
-```{r}
-colnames(f04)
-
-```
-```{r}
-colnames(f05)
-```
-```{r}
-colnames(f06)
-```
-```{r}
-colnames(f07)
-```
-```{r}
-colnames(f08)
-```
-```{r}
-colnames(f09)
-```
-```{r}
-colnames(f10)
-```
-f10 is missing "fire_id"
-```{r}
-colnames(f11)
-```
-
-```{r}
-colnames(f12)
-```
-```{r}
-colnames(f13)
-```
-```{r}
-colnames(f14)
-```
-
-
-# drop fire_id
-Remove fire_id as some are character and some are integer
-```{r}
-( pts01 = f01 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-
-( pts02 = f02 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-```
-
-```{r}
-( pts03 = f03 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-```
-
-```{r}
-( pts04 = f04 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-
-
-( pts05 = f05 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-```
-```{r}
-( pts06 = f06 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-
-
-( pts07 = f07 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-```
-
-```{r}
-( pts08 = f08 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-
-( pts09 = f09 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-```
-
-```{r}
-( pts10 = f10 %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-  
-( pts11 = f11 %>% 
-  dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-```
-
-```{r}
-( pts12 = f12 %>% 
- dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-
-
-( pts13 = f13 %>% dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-
-
-( pts14 = f14 %>% dplyr::select(-fire_id) %>% 
-  mutate(across(c(plot_id, site_id), as.character)) %>% 
-  mutate(across(c(fire_yr, orgnc_d, slope, day), as.numeric)) %>% 
-    mutate(across(day, ~coalesce(., 0))) )
-```
 
 
 
 # Combine all shapefiles
 ```{r}
-all_pts = dplyr::bind_rows(pts01, pts02, pts03, pts04, pts05, pts06, pts07, pts08, pts09, pts10, pts11, pts12, pts13, pts14)
+all_pts = dplyr::bind_rows(f01, f02, f03, f04, f05, f06, f07, f08, f09, f10, f11, f12, f13, f14, f15, f16)
 ```
 
 # Look at combined data
@@ -202,18 +56,26 @@ tail(all_pts)
 ```
 ## Check factor values
 ```{r}
-unique(all_pts$brl_tnd)
+unique(all_pts$biome)
 ```
 ```{r}
-unique(all_pts$thw_ctv)
+unique(all_pts$msrType)
 ```
 ```{r}
-min(all_pts$thw_dpt)
-max(all_pts$thw_dpt)
+min(all_pts$msrDpth)
+max(all_pts$msrDpth)
 ```
+
 ```{r}
-all_pts[is.na(all_pts$thw_ctv),]
-all_pts[is.na(all_pts$thw_dpt),]
+
+all_pts %>% 
+  st_drop_geometry() %>%
+  filter(is.na(msrDpth))
+```
+
+```{r}
+all_pts[is.na(all_pts$msrDpth),]
+all_pts[is.na(all_pts$msrDpth),]
 ```
 ```{r}
 all_pts %>% filter(last_nm=="Sizov, Soromotin, Brodt")
